Update index.html content
Added a new heading and paragraph

--- a/index.html
+++ b/index.html
@@ -8,5 +8,8 @@
 <body>
     <h1>Heading 1</h1>
     <p>My first paragraph.</p>
+
+    <h3>New heading added.</h3>
+    <p>This is the modified index.html file.</p>
 </body>
 </html>
